--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Harshul Varma # your name (or website title) here
-logo: "/images/github_profile.png?raw=true" # your photo (or logo) here
+logo: "/images/github_profile.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
   <br><br>
   Second description 
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/harshulvarma/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
