--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
 title: Harshul Varma # your name (or website title) here
 logo: "/images/github_profile.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Data Science professional with a heart and passion for innovation, creative problem solving and a mindset of getting things done.
+  I am a quick learner with proven collaborative experience in a fast-paced cross functional environment.
+  I have a keen interest in leveraging my analytical and research skills with knowledge and experience in data science, statistical inference and machine learning for data driven decisions and products.
   <br><br>
-  Second description 
+  Currently finishing my M.Eng. in Data Science at University of Toronto and seeking internship and full time opportunities starting January 2021
   <br><br>
   <a href="https://www.linkedin.com/in/harshulvarma/">View My LinkedIn Profile</a> 
   
