--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Harshul Varma # your name (or website title) here
-logo: "/images/github_profile.jpg?raw=true" # your photo (or logo) here
+logo: "/images/profile.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Science professional with a heart and passion for innovation, creative problem solving and a mindset of getting things done.
   I am a quick learner with proven collaborative experience in a fast-paced cross functional environment.
